# dedupe

./: .coveragerc  .flake8  .git-blame-ignore-revs  .git-ignore-revs  .gitignore  .install-dependencies.sh  .manylinux-install.sh  .pre-commit-config.yaml  .pylint_config  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Pipfile  README  README.md  README.rdoc  README.rst  THANKS.md  affinegap.c  affinegap.py  affinegap.pyx  appveyor.yml  avg_sgd_lr.py  base_requirements.txt  blocking.py  canonical_example.py  clustering.py  core.py  coverage.xml  dedupe.py  dev_requirements.txt  early_childhood.py  ecp_output_1.txt  (+19 more)
.circleci/: config.yml
.github/: dependabot.yml
.github/scripts/: asv_markdown.py
.github/workflows/: benchmark-bot.yml  codeql-analysis.yml  lock.yml  pythonpackage.yml
appveyor/: install-miniconda.ps1
benchmarks/: asv.conf.json  setup.py
datasets/: ECP_all_raw_input.csv  restaurant-nophone-training.csv  restaurant-nophone.csv
dedupe/: __init__.py  _init.py  _typing.py  api.py  backport.py  blocking.py  branch_and_bound.py  canonical.py  canonicalization.py  canopy_index.py  centroid.py  clustering.py  comparators.py  convenience.py  core.py  cpredicates.c  cpredicates.pyx  crossvalidation.py  datamodel.py  dedupe.py  distances.py  fieldclasses.py  getch.py  hookspecs.py  hungarian.py  index.py  labeler.py  learner.py  levenshtein.py  logger.py  lr.py  lsh.py  metric_tree.py  model_definition.py  numpy_memory_test.py  predicate_functions.py  predicates.py  sampling.py  serializer.py  tfidf.py  (+3 more)
dedupe/distance/: __init__.py  (+2 more)
docs/: API-documentation.rst  Bibliography.rst  Choosing-a-good-threshold.rst  Examples.rst  Field-definition.rst  Grouping-duplicates.rst  Home.rst  How-it-works.rst  Makefile  Making-smart-comparisons.rst  Matching-records.rst  OSX-Install-Notes.rst  Special-Cases.rst  Troubleshooting.rst  User-guide.rst  Variable-definition.rst  common_dedupe_methods.rst  common_gazetteer_methods.rst  common_learning_methods.rst  common_methods.rst  common_recordlink_methods.rst  conf.py  dedupe.rst  dedupe.variables.rst  index.rst  index.rst~  modules.rst  requirements.txt
examples/: active_canonical_example.py  canonical_example.py  create_db.py  csv_example.py  early_childhood.py  exampleIO.py  print_csv.py  tech_locator.py
lib/: log_train.py
src/: affinegap.c  affinegap.pyx  cosine.c  cosine.pyx  cpredicates.c  cpredicates.pyx  haversine.c  haversine.pyx  jaccard.c  jaccard.pyx  lr.c  lr.pyx
test/: canonical_test.py  canonical_test_matching.py  duplicateCluster_memory_case.py  exampleIO.py  test_affine_memory.py  test_api.py  test_convenience.py  test_core.py  test_cosine.py  test_dedupe.py  test_haversine.py  test_jaccard.py  test_memory.sh  test_predicates.py  testaffine.py
tests/: blocks_d.pickle  canonical.py  canonical_gazetteer.py  canonical_matching.py  canonical_test.py  canonical_test_matching.py  dbm_osx.py  duplicateCluster_memory_case.py  exampleIO.py  test_address.py  test_api.py  test_blocking.py  test_canonical.py  test_core.py  test_cosine.py  test_cpredicates.py  test_crossvalidation.py  test_dedupe.py  test_exists.py  test_jaccard.py  test_labeler.py  test_memory.sh  test_predicate_functions.py  test_predicates.py  test_price.py  test_sampling.py  test_serializer.py  test_tfidf.py  test_training.py
(+120 files in other folders)
