[build-system]
requires = ["setuptools",
            "wheel",
            "cython"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
files = "dedupe"
show_error_codes = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--cov dedupe --cov-report html"
testpaths = ["tests", "dedupe"]

[tool.isort]
profile = "black"
src_paths = ["dedupe", "tests", "benchmarks"]

[tool.coverage.run]
omit = ["dedupe/backport.py"]
source = ["dedupe"]
